[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "pytest>=8.4.1",
    "requests-mock>=1.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_loader"]

[tool.hatch.build.targets.wheel.force-include]
"tests/fixtures" = "tests/fixtures"

[project.scripts]
page-loader = "page_loader.scripts.page_loader:main"
